Fix input-group overflow

--- a/options/options.css
+++ b/options/options.css
@@ -47,6 +47,7 @@ h4 {
 
 .input-group {
     width: 100%;
+    display: block;
 }
 
 .rule-header,
